src/bison.output
State 109 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce
State 137 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 141 conflicts: 10 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: MainClass ClassDeclarationList

    2 MainClass: CLASS Idenifier LBRACE MainMethod RBRACE

    3 MainMethod: PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Idenifier RPAREN LBRACE VarDeclaratitionList StatementList RBRACE

    4 ClassDeclarationList: %empty
    5                     | Class ClassDeclarationList

    6 Class: CLASS Idenifier LBRACE VarDeclaratitionList MethodDeclarationList RBRACE
    7      | CLASS Idenifier EXTENDS Idenifier LBRACE VarDeclaratitionList MethodDeclarationList RBRACE

    8 MethodDeclaration: PUBLIC Type Idenifier LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE
    9                  | PRIVATE Type Idenifier LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

   10 MethodDeclarationList: %empty
   11                      | MethodDeclaration MethodDeclarationList

   12 VarDeclaration: Type Idenifier SEMI

   13 VarDeclaratitionList: %empty
   14                     | VarDeclaratitionList VarDeclaration

   15 Argument: Type Idenifier

   16 Type: INT_ARRAY
   17     | BOOLEAN
   18     | INT
   19     | Idenifier

   20 ArgumentList: %empty
   21             | Argument
   22             | Argument COMMA ArgumentList

   23 StatementList: %empty
   24              | Statement StatementList

   25 Statement: LBRACE StatementList RBRACE
   26          | IF LPAREN Expression RPAREN Statement ELSE Statement
   27          | WHILE LPAREN Expression RPAREN Statement
   28          | PRINTLN LPAREN Expression RPAREN SEMI
   29          | Idenifier ASSIGN Expression SEMI
   30          | Idenifier LBRACKET Expression RBRACKET ASSIGN Expression SEMI

   31 Expression: Expression PLUS Expression
   32           | Expression MINUS Expression
   33           | Expression TIMES Expression
   34           | Expression AND Expression
   35           | Expression OR Expression
   36           | Expression LESS Expression
   37           | Expression GREATER Expression
   38           | Expression MOD Expression
   39           | Expression LBRACKET Expression RBRACKET
   40           | Expression DOT LENGTH
   41           | Expression DOT Idenifier LPAREN ExpressionList RPAREN
   42           | MINUS NUM
   43           | NUM
   44           | TRUE
   45           | FALSE
   46           | Idenifier
   47           | THIS
   48           | NEW INT LBRACKET Expression RBRACKET
   49           | NEW Idenifier LPAREN RPAREN
   50           | NOT Expression
   51           | LPAREN Expression RPAREN

   52 ExpressionList: %empty
   53               | Expression COMMA ExpressionList

   54 Idenifier: ID


Terminals, with rules where they appear

$end (0) 0
error (256)
NEW (258) 48 49
CLASS (259) 2 6 7
EXTENDS (260) 7
THIS (261) 47
RETURN (262) 8 9
PUBLIC (263) 3 8
PRIVATE (264) 9
STATIC (265) 3
PRINTLN (266) 28
INT (267) 18 48
BOOLEAN (268) 17
VOID (269) 3
INT_ARRAY (270) 16
LENGTH (271) 40
TRUE (272) 44
FALSE (273) 45
WHILE (274) 27
IF (275) 26
ELSE (276) 26
NUM (277) 42 43
ID (278) 54
LPAREN (279) 3 8 9 26 27 28 41 49 51
RPAREN (280) 3 8 9 26 27 28 41 49 51
LBRACKET (281) 3 30 39 48
RBRACKET (282) 3 30 39 48
LBRACE (283) 2 3 6 7 8 9 25
RBRACE (284) 2 3 6 7 8 9 25
COMMA (285) 22 53
DOT (286) 40 41
SEMI (287) 8 9 12 28 29 30
AND (288) 34
OR (289) 35
PLUS (290) 31
MINUS (291) 32 42
TIMES (292) 33
MOD (293) 38
MAIN (294) 3
STRING (295) 3
LESS (296) 36
GREATER (297) 37
NOT (298) 50
ASSIGN (299) 29 30


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
Program (46)
    on left: 1, on right: 0
MainClass (47)
    on left: 2, on right: 1
MainMethod (48)
    on left: 3, on right: 2
ClassDeclarationList (49)
    on left: 4 5, on right: 1 5
Class (50)
    on left: 6 7, on right: 5
MethodDeclaration (51)
    on left: 8 9, on right: 11
MethodDeclarationList (52)
    on left: 10 11, on right: 6 7 11
VarDeclaration (53)
    on left: 12, on right: 14
VarDeclaratitionList (54)
    on left: 13 14, on right: 3 6 7 8 9 14
Argument (55)
    on left: 15, on right: 21 22
Type (56)
    on left: 16 17 18 19, on right: 8 9 12 15
ArgumentList (57)
    on left: 20 21 22, on right: 8 9 22
StatementList (58)
    on left: 23 24, on right: 3 8 9 24 25
Statement (59)
    on left: 25 26 27 28 29 30, on right: 24 26 27
Expression (60)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51, on right: 8 9 26 27 28 29 30 31 32 33 34 35 36 37 38
    39 40 41 48 50 51 53
ExpressionList (61)
    on left: 52 53, on right: 41 53
Idenifier (62)
    on left: 54, on right: 2 3 6 7 8 9 12 15 19 29 30 41 46 49


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program    go to state 2
    MainClass  go to state 3


State 1

    2 MainClass: CLASS . Idenifier LBRACE MainMethod RBRACE

    ID  shift, and go to state 4

    Idenifier  go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    1 Program: MainClass . ClassDeclarationList

    CLASS  shift, and go to state 7

    $default  reduce using rule 4 (ClassDeclarationList)

    ClassDeclarationList  go to state 8
    Class                 go to state 9


State 4

   54 Idenifier: ID .

    $default  reduce using rule 54 (Idenifier)


State 5

    2 MainClass: CLASS Idenifier . LBRACE MainMethod RBRACE

    LBRACE  shift, and go to state 10


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    6 Class: CLASS . Idenifier LBRACE VarDeclaratitionList MethodDeclarationList RBRACE
    7      | CLASS . Idenifier EXTENDS Idenifier LBRACE VarDeclaratitionList MethodDeclarationList RBRACE

    ID  shift, and go to state 4

    Idenifier  go to state 11


State 8

    1 Program: MainClass ClassDeclarationList .

    $default  reduce using rule 1 (Program)


State 9

    5 ClassDeclarationList: Class . ClassDeclarationList

    CLASS  shift, and go to state 7

    $default  reduce using rule 4 (ClassDeclarationList)

    ClassDeclarationList  go to state 12
    Class                 go to state 9


State 10

    2 MainClass: CLASS Idenifier LBRACE . MainMethod RBRACE

    PUBLIC  shift, and go to state 13

    MainMethod  go to state 14


State 11

    6 Class: CLASS Idenifier . LBRACE VarDeclaratitionList MethodDeclarationList RBRACE
    7      | CLASS Idenifier . EXTENDS Idenifier LBRACE VarDeclaratitionList MethodDeclarationList RBRACE

    EXTENDS  shift, and go to state 15
    LBRACE   shift, and go to state 16


State 12

    5 ClassDeclarationList: Class ClassDeclarationList .

    $default  reduce using rule 5 (ClassDeclarationList)


State 13

    3 MainMethod: PUBLIC . STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Idenifier RPAREN LBRACE VarDeclaratitionList StatementList RBRACE

    STATIC  shift, and go to state 17


State 14

    2 MainClass: CLASS Idenifier LBRACE MainMethod . RBRACE

    RBRACE  shift, and go to state 18


State 15

    7 Class: CLASS Idenifier EXTENDS . Idenifier LBRACE VarDeclaratitionList MethodDeclarationList RBRACE

    ID  shift, and go to state 4

    Idenifier  go to state 19


State 16

    6 Class: CLASS Idenifier LBRACE . VarDeclaratitionList MethodDeclarationList RBRACE

    $default  reduce using rule 13 (VarDeclaratitionList)

    VarDeclaratitionList  go to state 20


State 17

    3 MainMethod: PUBLIC STATIC . VOID MAIN LPAREN STRING LBRACKET RBRACKET Idenifier RPAREN LBRACE VarDeclaratitionList StatementList RBRACE

    VOID  shift, and go to state 21


State 18

    2 MainClass: CLASS Idenifier LBRACE MainMethod RBRACE .

    $default  reduce using rule 2 (MainClass)


State 19

    7 Class: CLASS Idenifier EXTENDS Idenifier . LBRACE VarDeclaratitionList MethodDeclarationList RBRACE

    LBRACE  shift, and go to state 22


State 20

    6 Class: CLASS Idenifier LBRACE VarDeclaratitionList . MethodDeclarationList RBRACE
   14 VarDeclaratitionList: VarDeclaratitionList . VarDeclaration

    PUBLIC     shift, and go to state 23
    PRIVATE    shift, and go to state 24
    INT        shift, and go to state 25
    BOOLEAN    shift, and go to state 26
    INT_ARRAY  shift, and go to state 27
    ID         shift, and go to state 4

    $default  reduce using rule 10 (MethodDeclarationList)

    MethodDeclaration      go to state 28
    MethodDeclarationList  go to state 29
    VarDeclaration         go to state 30
    Type                   go to state 31
    Idenifier              go to state 32


State 21

    3 MainMethod: PUBLIC STATIC VOID . MAIN LPAREN STRING LBRACKET RBRACKET Idenifier RPAREN LBRACE VarDeclaratitionList StatementList RBRACE

    MAIN  shift, and go to state 33


State 22

    7 Class: CLASS Idenifier EXTENDS Idenifier LBRACE . VarDeclaratitionList MethodDeclarationList RBRACE

    $default  reduce using rule 13 (VarDeclaratitionList)

    VarDeclaratitionList  go to state 34


State 23

    8 MethodDeclaration: PUBLIC . Type Idenifier LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

    INT        shift, and go to state 25
    BOOLEAN    shift, and go to state 26
    INT_ARRAY  shift, and go to state 27
    ID         shift, and go to state 4

    Type       go to state 35
    Idenifier  go to state 32


State 24

    9 MethodDeclaration: PRIVATE . Type Idenifier LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

    INT        shift, and go to state 25
    BOOLEAN    shift, and go to state 26
    INT_ARRAY  shift, and go to state 27
    ID         shift, and go to state 4

    Type       go to state 36
    Idenifier  go to state 32


State 25

   18 Type: INT .

    $default  reduce using rule 18 (Type)


State 26

   17 Type: BOOLEAN .

    $default  reduce using rule 17 (Type)


State 27

   16 Type: INT_ARRAY .

    $default  reduce using rule 16 (Type)


State 28

   11 MethodDeclarationList: MethodDeclaration . MethodDeclarationList

    PUBLIC   shift, and go to state 23
    PRIVATE  shift, and go to state 24

    $default  reduce using rule 10 (MethodDeclarationList)

    MethodDeclaration      go to state 28
    MethodDeclarationList  go to state 37


State 29

    6 Class: CLASS Idenifier LBRACE VarDeclaratitionList MethodDeclarationList . RBRACE

    RBRACE  shift, and go to state 38


State 30

   14 VarDeclaratitionList: VarDeclaratitionList VarDeclaration .

    $default  reduce using rule 14 (VarDeclaratitionList)


State 31

   12 VarDeclaration: Type . Idenifier SEMI

    ID  shift, and go to state 4

    Idenifier  go to state 39


State 32

   19 Type: Idenifier .

    $default  reduce using rule 19 (Type)


State 33

    3 MainMethod: PUBLIC STATIC VOID MAIN . LPAREN STRING LBRACKET RBRACKET Idenifier RPAREN LBRACE VarDeclaratitionList StatementList RBRACE

    LPAREN  shift, and go to state 40


State 34

    7 Class: CLASS Idenifier EXTENDS Idenifier LBRACE VarDeclaratitionList . MethodDeclarationList RBRACE
   14 VarDeclaratitionList: VarDeclaratitionList . VarDeclaration

    PUBLIC     shift, and go to state 23
    PRIVATE    shift, and go to state 24
    INT        shift, and go to state 25
    BOOLEAN    shift, and go to state 26
    INT_ARRAY  shift, and go to state 27
    ID         shift, and go to state 4

    $default  reduce using rule 10 (MethodDeclarationList)

    MethodDeclaration      go to state 28
    MethodDeclarationList  go to state 41
    VarDeclaration         go to state 30
    Type                   go to state 31
    Idenifier              go to state 32


State 35

    8 MethodDeclaration: PUBLIC Type . Idenifier LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

    ID  shift, and go to state 4

    Idenifier  go to state 42


State 36

    9 MethodDeclaration: PRIVATE Type . Idenifier LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

    ID  shift, and go to state 4

    Idenifier  go to state 43


State 37

   11 MethodDeclarationList: MethodDeclaration MethodDeclarationList .

    $default  reduce using rule 11 (MethodDeclarationList)


State 38

    6 Class: CLASS Idenifier LBRACE VarDeclaratitionList MethodDeclarationList RBRACE .

    $default  reduce using rule 6 (Class)


State 39

   12 VarDeclaration: Type Idenifier . SEMI

    SEMI  shift, and go to state 44


State 40

    3 MainMethod: PUBLIC STATIC VOID MAIN LPAREN . STRING LBRACKET RBRACKET Idenifier RPAREN LBRACE VarDeclaratitionList StatementList RBRACE

    STRING  shift, and go to state 45


State 41

    7 Class: CLASS Idenifier EXTENDS Idenifier LBRACE VarDeclaratitionList MethodDeclarationList . RBRACE

    RBRACE  shift, and go to state 46


State 42

    8 MethodDeclaration: PUBLIC Type Idenifier . LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

    LPAREN  shift, and go to state 47


State 43

    9 MethodDeclaration: PRIVATE Type Idenifier . LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

    LPAREN  shift, and go to state 48


State 44

   12 VarDeclaration: Type Idenifier SEMI .

    $default  reduce using rule 12 (VarDeclaration)


State 45

    3 MainMethod: PUBLIC STATIC VOID MAIN LPAREN STRING . LBRACKET RBRACKET Idenifier RPAREN LBRACE VarDeclaratitionList StatementList RBRACE

    LBRACKET  shift, and go to state 49


State 46

    7 Class: CLASS Idenifier EXTENDS Idenifier LBRACE VarDeclaratitionList MethodDeclarationList RBRACE .

    $default  reduce using rule 7 (Class)


State 47

    8 MethodDeclaration: PUBLIC Type Idenifier LPAREN . ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

    INT        shift, and go to state 25
    BOOLEAN    shift, and go to state 26
    INT_ARRAY  shift, and go to state 27
    ID         shift, and go to state 4

    $default  reduce using rule 20 (ArgumentList)

    Argument      go to state 50
    Type          go to state 51
    ArgumentList  go to state 52
    Idenifier     go to state 32


State 48

    9 MethodDeclaration: PRIVATE Type Idenifier LPAREN . ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

    INT        shift, and go to state 25
    BOOLEAN    shift, and go to state 26
    INT_ARRAY  shift, and go to state 27
    ID         shift, and go to state 4

    $default  reduce using rule 20 (ArgumentList)

    Argument      go to state 50
    Type          go to state 51
    ArgumentList  go to state 53
    Idenifier     go to state 32


State 49

    3 MainMethod: PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET . RBRACKET Idenifier RPAREN LBRACE VarDeclaratitionList StatementList RBRACE

    RBRACKET  shift, and go to state 54


State 50

   21 ArgumentList: Argument .
   22             | Argument . COMMA ArgumentList

    COMMA  shift, and go to state 55

    $default  reduce using rule 21 (ArgumentList)


State 51

   15 Argument: Type . Idenifier

    ID  shift, and go to state 4

    Idenifier  go to state 56


State 52

    8 MethodDeclaration: PUBLIC Type Idenifier LPAREN ArgumentList . RPAREN LBRACE VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

    RPAREN  shift, and go to state 57


State 53

    9 MethodDeclaration: PRIVATE Type Idenifier LPAREN ArgumentList . RPAREN LBRACE VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

    RPAREN  shift, and go to state 58


State 54

    3 MainMethod: PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET . Idenifier RPAREN LBRACE VarDeclaratitionList StatementList RBRACE

    ID  shift, and go to state 4

    Idenifier  go to state 59


State 55

   22 ArgumentList: Argument COMMA . ArgumentList

    INT        shift, and go to state 25
    BOOLEAN    shift, and go to state 26
    INT_ARRAY  shift, and go to state 27
    ID         shift, and go to state 4

    $default  reduce using rule 20 (ArgumentList)

    Argument      go to state 50
    Type          go to state 51
    ArgumentList  go to state 60
    Idenifier     go to state 32


State 56

   15 Argument: Type Idenifier .

    $default  reduce using rule 15 (Argument)


State 57

    8 MethodDeclaration: PUBLIC Type Idenifier LPAREN ArgumentList RPAREN . LBRACE VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

    LBRACE  shift, and go to state 61


State 58

    9 MethodDeclaration: PRIVATE Type Idenifier LPAREN ArgumentList RPAREN . LBRACE VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

    LBRACE  shift, and go to state 62


State 59

    3 MainMethod: PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Idenifier . RPAREN LBRACE VarDeclaratitionList StatementList RBRACE

    RPAREN  shift, and go to state 63


State 60

   22 ArgumentList: Argument COMMA ArgumentList .

    $default  reduce using rule 22 (ArgumentList)


State 61

    8 MethodDeclaration: PUBLIC Type Idenifier LPAREN ArgumentList RPAREN LBRACE . VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

    $default  reduce using rule 13 (VarDeclaratitionList)

    VarDeclaratitionList  go to state 64


State 62

    9 MethodDeclaration: PRIVATE Type Idenifier LPAREN ArgumentList RPAREN LBRACE . VarDeclaratitionList StatementList RETURN Expression SEMI RBRACE

    $default  reduce using rule 13 (VarDeclaratitionList)

    VarDeclaratitionList  go to state 65


State 63

    3 MainMethod: PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Idenifier RPAREN . LBRACE VarDeclaratitionList StatementList RBRACE

    LBRACE  shift, and go to state 66


State 64

    8 MethodDeclaration: PUBLIC Type Idenifier LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList . StatementList RETURN Expression SEMI RBRACE
   14 VarDeclaratitionList: VarDeclaratitionList . VarDeclaration

    PRINTLN    shift, and go to state 67
    INT        shift, and go to state 25
    BOOLEAN    shift, and go to state 26
    INT_ARRAY  shift, and go to state 27
    WHILE      shift, and go to state 68
    IF         shift, and go to state 69
    ID         shift, and go to state 4
    LBRACE     shift, and go to state 70

    $default  reduce using rule 23 (StatementList)

    VarDeclaration  go to state 30
    Type            go to state 31
    StatementList   go to state 71
    Statement       go to state 72
    Idenifier       go to state 73


State 65

    9 MethodDeclaration: PRIVATE Type Idenifier LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList . StatementList RETURN Expression SEMI RBRACE
   14 VarDeclaratitionList: VarDeclaratitionList . VarDeclaration

    PRINTLN    shift, and go to state 67
    INT        shift, and go to state 25
    BOOLEAN    shift, and go to state 26
    INT_ARRAY  shift, and go to state 27
    WHILE      shift, and go to state 68
    IF         shift, and go to state 69
    ID         shift, and go to state 4
    LBRACE     shift, and go to state 70

    $default  reduce using rule 23 (StatementList)

    VarDeclaration  go to state 30
    Type            go to state 31
    StatementList   go to state 74
    Statement       go to state 72
    Idenifier       go to state 73


State 66

    3 MainMethod: PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Idenifier RPAREN LBRACE . VarDeclaratitionList StatementList RBRACE

    $default  reduce using rule 13 (VarDeclaratitionList)

    VarDeclaratitionList  go to state 75


State 67

   28 Statement: PRINTLN . LPAREN Expression RPAREN SEMI

    LPAREN  shift, and go to state 76


State 68

   27 Statement: WHILE . LPAREN Expression RPAREN Statement

    LPAREN  shift, and go to state 77


State 69

   26 Statement: IF . LPAREN Expression RPAREN Statement ELSE Statement

    LPAREN  shift, and go to state 78


State 70

   25 Statement: LBRACE . StatementList RBRACE

    PRINTLN  shift, and go to state 67
    WHILE    shift, and go to state 68
    IF       shift, and go to state 69
    ID       shift, and go to state 4
    LBRACE   shift, and go to state 70

    $default  reduce using rule 23 (StatementList)

    StatementList  go to state 79
    Statement      go to state 72
    Idenifier      go to state 80


State 71

    8 MethodDeclaration: PUBLIC Type Idenifier LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList . RETURN Expression SEMI RBRACE

    RETURN  shift, and go to state 81


State 72

   24 StatementList: Statement . StatementList

    PRINTLN  shift, and go to state 67
    WHILE    shift, and go to state 68
    IF       shift, and go to state 69
    ID       shift, and go to state 4
    LBRACE   shift, and go to state 70

    $default  reduce using rule 23 (StatementList)

    StatementList  go to state 82
    Statement      go to state 72
    Idenifier      go to state 80


State 73

   19 Type: Idenifier .
   29 Statement: Idenifier . ASSIGN Expression SEMI
   30          | Idenifier . LBRACKET Expression RBRACKET ASSIGN Expression SEMI

    LBRACKET  shift, and go to state 83
    ASSIGN    shift, and go to state 84

    $default  reduce using rule 19 (Type)


State 74

    9 MethodDeclaration: PRIVATE Type Idenifier LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList . RETURN Expression SEMI RBRACE

    RETURN  shift, and go to state 85


State 75

    3 MainMethod: PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Idenifier RPAREN LBRACE VarDeclaratitionList . StatementList RBRACE
   14 VarDeclaratitionList: VarDeclaratitionList . VarDeclaration

    PRINTLN    shift, and go to state 67
    INT        shift, and go to state 25
    BOOLEAN    shift, and go to state 26
    INT_ARRAY  shift, and go to state 27
    WHILE      shift, and go to state 68
    IF         shift, and go to state 69
    ID         shift, and go to state 4
    LBRACE     shift, and go to state 70

    $default  reduce using rule 23 (StatementList)

    VarDeclaration  go to state 30
    Type            go to state 31
    StatementList   go to state 86
    Statement       go to state 72
    Idenifier       go to state 73


State 76

   28 Statement: PRINTLN LPAREN . Expression RPAREN SEMI

    NEW     shift, and go to state 87
    THIS    shift, and go to state 88
    TRUE    shift, and go to state 89
    FALSE   shift, and go to state 90
    NUM     shift, and go to state 91
    ID      shift, and go to state 4
    LPAREN  shift, and go to state 92
    MINUS   shift, and go to state 93
    NOT     shift, and go to state 94

    Expression  go to state 95
    Idenifier   go to state 96


State 77

   27 Statement: WHILE LPAREN . Expression RPAREN Statement

    NEW     shift, and go to state 87
    THIS    shift, and go to state 88
    TRUE    shift, and go to state 89
    FALSE   shift, and go to state 90
    NUM     shift, and go to state 91
    ID      shift, and go to state 4
    LPAREN  shift, and go to state 92
    MINUS   shift, and go to state 93
    NOT     shift, and go to state 94

    Expression  go to state 97
    Idenifier   go to state 96


State 78

   26 Statement: IF LPAREN . Expression RPAREN Statement ELSE Statement

    NEW     shift, and go to state 87
    THIS    shift, and go to state 88
    TRUE    shift, and go to state 89
    FALSE   shift, and go to state 90
    NUM     shift, and go to state 91
    ID      shift, and go to state 4
    LPAREN  shift, and go to state 92
    MINUS   shift, and go to state 93
    NOT     shift, and go to state 94

    Expression  go to state 98
    Idenifier   go to state 96


State 79

   25 Statement: LBRACE StatementList . RBRACE

    RBRACE  shift, and go to state 99


State 80

   29 Statement: Idenifier . ASSIGN Expression SEMI
   30          | Idenifier . LBRACKET Expression RBRACKET ASSIGN Expression SEMI

    LBRACKET  shift, and go to state 83
    ASSIGN    shift, and go to state 84


State 81

    8 MethodDeclaration: PUBLIC Type Idenifier LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList RETURN . Expression SEMI RBRACE

    NEW     shift, and go to state 87
    THIS    shift, and go to state 88
    TRUE    shift, and go to state 89
    FALSE   shift, and go to state 90
    NUM     shift, and go to state 91
    ID      shift, and go to state 4
    LPAREN  shift, and go to state 92
    MINUS   shift, and go to state 93
    NOT     shift, and go to state 94

    Expression  go to state 100
    Idenifier   go to state 96


State 82

   24 StatementList: Statement StatementList .

    $default  reduce using rule 24 (StatementList)


State 83

   30 Statement: Idenifier LBRACKET . Expression RBRACKET ASSIGN Expression SEMI

    NEW     shift, and go to state 87
    THIS    shift, and go to state 88
    TRUE    shift, and go to state 89
    FALSE   shift, and go to state 90
    NUM     shift, and go to state 91
    ID      shift, and go to state 4
    LPAREN  shift, and go to state 92
    MINUS   shift, and go to state 93
    NOT     shift, and go to state 94

    Expression  go to state 101
    Idenifier   go to state 96


State 84

   29 Statement: Idenifier ASSIGN . Expression SEMI

    NEW     shift, and go to state 87
    THIS    shift, and go to state 88
    TRUE    shift, and go to state 89
    FALSE   shift, and go to state 90
    NUM     shift, and go to state 91
    ID      shift, and go to state 4
    LPAREN  shift, and go to state 92
    MINUS   shift, and go to state 93
    NOT     shift, and go to state 94

    Expression  go to state 102
    Idenifier   go to state 96


State 85

    9 MethodDeclaration: PRIVATE Type Idenifier LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList RETURN . Expression SEMI RBRACE

    NEW     shift, and go to state 87
    THIS    shift, and go to state 88
    TRUE    shift, and go to state 89
    FALSE   shift, and go to state 90
    NUM     shift, and go to state 91
    ID      shift, and go to state 4
    LPAREN  shift, and go to state 92
    MINUS   shift, and go to state 93
    NOT     shift, and go to state 94

    Expression  go to state 103
    Idenifier   go to state 96


State 86

    3 MainMethod: PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET Idenifier RPAREN LBRACE VarDeclaratitionList StatementList . RBRACE

    RBRACE  shift, and go to state 104


State 87

   48 Expression: NEW . INT LBRACKET Expression RBRACKET
   49           | NEW . Idenifier LPAREN RPAREN

    INT  shift, and go to state 105
    ID   shift, and go to state 4

    Idenifier  go to state 106


State 88

   47 Expression: THIS .

    $default  reduce using rule 47 (Expression)


State 89

   44 Expression: TRUE .

    $default  reduce using rule 44 (Expression)


State 90

   45 Expression: FALSE .

    $default  reduce using rule 45 (Expression)


State 91

   43 Expression: NUM .

    $default  reduce using rule 43 (Expression)


State 92

   51 Expression: LPAREN . Expression RPAREN

    NEW     shift, and go to state 87
    THIS    shift, and go to state 88
    TRUE    shift, and go to state 89
    FALSE   shift, and go to state 90
    NUM     shift, and go to state 91
    ID      shift, and go to state 4
    LPAREN  shift, and go to state 92
    MINUS   shift, and go to state 93
    NOT     shift, and go to state 94

    Expression  go to state 107
    Idenifier   go to state 96


State 93

   42 Expression: MINUS . NUM

    NUM  shift, and go to state 108


State 94

   50 Expression: NOT . Expression

    NEW     shift, and go to state 87
    THIS    shift, and go to state 88
    TRUE    shift, and go to state 89
    FALSE   shift, and go to state 90
    NUM     shift, and go to state 91
    ID      shift, and go to state 4
    LPAREN  shift, and go to state 92
    MINUS   shift, and go to state 93
    NOT     shift, and go to state 94

    Expression  go to state 109
    Idenifier   go to state 96


State 95

   28 Statement: PRINTLN LPAREN Expression . RPAREN SEMI
   31 Expression: Expression . PLUS Expression
   32           | Expression . MINUS Expression
   33           | Expression . TIMES Expression
   34           | Expression . AND Expression
   35           | Expression . OR Expression
   36           | Expression . LESS Expression
   37           | Expression . GREATER Expression
   38           | Expression . MOD Expression
   39           | Expression . LBRACKET Expression RBRACKET
   40           | Expression . DOT LENGTH
   41           | Expression . DOT Idenifier LPAREN ExpressionList RPAREN

    RPAREN    shift, and go to state 110
    LBRACKET  shift, and go to state 111
    DOT       shift, and go to state 112
    AND       shift, and go to state 113
    OR        shift, and go to state 114
    PLUS      shift, and go to state 115
    MINUS     shift, and go to state 116
    TIMES     shift, and go to state 117
    MOD       shift, and go to state 118
    LESS      shift, and go to state 119
    GREATER   shift, and go to state 120


State 96

   46 Expression: Idenifier .

    $default  reduce using rule 46 (Expression)


State 97

   27 Statement: WHILE LPAREN Expression . RPAREN Statement
   31 Expression: Expression . PLUS Expression
   32           | Expression . MINUS Expression
   33           | Expression . TIMES Expression
   34           | Expression . AND Expression
   35           | Expression . OR Expression
   36           | Expression . LESS Expression
   37           | Expression . GREATER Expression
   38           | Expression . MOD Expression
   39           | Expression . LBRACKET Expression RBRACKET
   40           | Expression . DOT LENGTH
   41           | Expression . DOT Idenifier LPAREN ExpressionList RPAREN

    RPAREN    shift, and go to state 121
    LBRACKET  shift, and go to state 111
    DOT       shift, and go to state 112
    AND       shift, and go to state 113
    OR        shift, and go to state 114
    PLUS      shift, and go to state 115
    MINUS     shift, and go to state 116
    TIMES     shift, and go to state 117
    MOD       shift, and go to state 118
    LESS      shift, and go to state 119
    GREATER   shift, and go to state 120


State 98

   26 Statement: IF LPAREN Expression . RPAREN Statement ELSE Statement
   31 Expression: Expression . PLUS Expression
   32           | Expression . MINUS Expression
   33           | Expression . TIMES Expression
   34           | Expression . AND Expression
   35           | Expression . OR Expression
   36           | Expression . LESS Expression
   37           | Expression . GREATER Expression
   38           | Expression . MOD Expression
   39           | Expression . LBRACKET Expression RBRACKET
   40           | Expression . DOT LENGTH
   41           | Expression . DOT Idenifier LPAREN ExpressionList RPAREN

    RPAREN    shift, and go to state 122
    LBRACKET  shift, and go to state 111
    DOT       shift, and go to state 112
    AND       shift, and go to state 113
    OR        shift, and go to state 114
    PLUS      shift, and go to state 115
    MINUS     shift, and go to state 116
    TIMES     shift, and go to state 117
    MOD       shift, and go to state 118
    LESS      shift, and go to state 119
    GREATER   shift, and go to state 120


State 99

   25 Statement: LBRACE StatementList RBRACE .

    $default  reduce using rule 25 (Statement)


State 100

    8 MethodDeclaration: PUBLIC Type Idenifier LPAREN ArgumentList RPAREN LBRACE VarDeclaratitionList StatementList RETURN Expression . SEMI RBRACE
   31 Expression: Expression . PLUS Expression
   32           | Expression . MINUS Expression
   33           | Expression . TIMES Expression
   34           | Expression . AND Expression
   35           | Expression . OR Expression
   36           | Expression . LESS Expression
   37           | Expression . GREATER Expression
   38           | Expression . MOD Expression
   39           | Expression . LBRACKET Expression RBRACKET
   40           | Expression . DOT LENGTH
   41           | Expression . DOT Idenifier LPAREN ExpressionList RPAREN

    LBRACKET  shift, and go to state 111
    DOT       shift, and go to state 112
    SEMI      shift, and go to state 123
    AND       shift, and go to state 113
    OR        shift, and go to state 114
    PLUS      shift, and go to state 115
    MINUS     shift, and go to state 116
    TIMES     shift, and go to state 117
    MOD       shift, and go to state 118
    LESS      shift, and go to state 119
    GREATER   shift, and go to state 120


State 101
